--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 <!-- <app-heroe></app-heroe> -->
 
-<app-contador></app-contador>
+<!--<app-contador></app-contador> -->
 
 <!-- <app-listado></app-listado> -->
+
+<app-main-page></app-main-page>
